# ark-manager-web

./: .autorc.json  .dockerignore  .gitignore  .pkgr.yml  .yarnrc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.client  Gemfile  LICENSE  Makefile.toml  Procfile  README.md  Rakefile  Vagrantfile  app.rb  ark_manager_api.rb  ark_manager_scheduler.rb  ark_manager_schedules.rb  ark_manager_web.rb  bower.json  config.ru  docker-compose.dev.yml  docker-compose.yml  package.json  research.txt  setup.sh  test.js  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: docker-build.yml  docker-release.yml  enforce-labels.yml  release.yml  rust.yml
agent/: Cargo.toml  Gemfile  Makefile.toml  README.md  api_app.rb  scheduler_controller.rb
agent/src/: lib.rs  main.rs
agent/src/ark_manager/commands/: command.rs  mod.rs
agent/src/utils/: constants.rs  macros.rs  mod.rs  state.rs
api/: api_app.rb  scheduler_controller.rb
client/: Cargo.toml  Makefile.toml  index.html  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
client/config/: svelte.json
client/src/: App.svelte  global.css  global.d.ts  main.ts
client/src/components/: action-button.svelte  card.svelte  output-log.svelte  (+2 more)
config/: Caddyfile  environment.rb  post-install.sh  setup_user.sh  unicorn.rb
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: service.yml  statefulset.yml
lib/: error.rb  mod_list.rb  predefined_schedules.rb
lib/tasks/: configure.rake
public/html/: mod_list.html  player_list.html  schedule_states.html  server_actions.html  server_status.html
public/javascript/: index.js
salt/: minion
salt/roots/: top.sls
scripts/: entrypoint.sh  root.sh
server/: Cargo.toml  Makefile.toml
server/src/: main.rs  server.rs
server/src/commands/: logs.rs  mod.rs  status.rs  update.rs
server/src/managed/: configs.rs  logs.rs  mod.rs
server/src/utils/: mod.rs  unix_socket.rs
shared/: Cargo.toml  README.md
shared/src/: ark_manager_path.rs  command.rs  constants.rs  lib.rs  logger.rs  state.rs
src/: api.rb  web.rb
src/client/: app.vue  index.html  index.ts  store.ts  types.d.ts
src/middlewares/: backend.rb
src/views/: install.md
views/: index.haml
web/: web_app.rb
web/views/: index.haml  mod_list.haml  player_list.haml  server_actions.haml  server_schedules.haml  server_status.haml
(+32 files in other folders)
