[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path="../shared"}
rocket = {version = "0.5.0-rc", features = ["default", "json"] }
which = "4.2.2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0"
linemux = "0.2"
urlencoding = "2.1.0"

[features]
use_binary = []
