[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = {path="../shared"}
rocket = {version = "0.5.0-rc.3", features = ["default", "json"] }
which = "4.4.1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strip-ansi-escapes = "0"
linemux = "0.3"
urlencoding = "2.1.3"

[features]
use_binary = []
